// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleProgress should render custom default slot correctly 1`] = `
<div class="fx-circle-progress" style="font-size: 14.875px;">
  <fx-activity-indicator-loading-stub class="fx-circle-progress_bar" size="100" rate="0" strokewidth="5.37"></fx-activity-indicator-loading-stub>
  <div class="fx-circle-progress_text" style="padding: 5.37px;">0%</div>
</div>
`;

exports[`CircleProgress should render default slot correctly 1`] = `
<div class="fx-circle-progress" style="font-size: 14.875px;">
  <fx-activity-indicator-loading-stub class="fx-circle-progress_bar" size="100" rate="0" strokewidth="5.37"></fx-activity-indicator-loading-stub>
  <div class="fx-circle-progress_text" style="padding: 5.37px;">0%</div>
</div>
`;

exports[`CircleProgress should render default slot correctly 2`] = `
<div class="fx-circle-progress" style="font-size: 14.875px;">
  <fx-activity-indicator-loading-stub class="fx-circle-progress_bar" size="100" rate="0" strokewidth="5.37"></fx-activity-indicator-loading-stub>
  <div class="fx-circle-progress_text" style="padding: 5.37px;">50%</div>
</div>
`;

exports[`CircleProgress should render default slot correctly 3`] = `
<div class="fx-circle-progress" style="font-size: 14.875px;">
  <fx-activity-indicator-loading-stub class="fx-circle-progress_bar" size="100" rate="0" strokewidth="5.37"></fx-activity-indicator-loading-stub>
  <div class="fx-circle-progress_text" style="padding: 5.37px;">100%</div>
</div>
`;
